--- a/package.json
+++ b/package.json
@@ -10,13 +10,24 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
+    "framer-motion": "^6.3.10",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.32.2",
+    "react-icons": "^4.4.0",
+    "react-query": "^3.39.1",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.3",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://myusername.github.io/nomflix",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.25"
   }
 }
